[tool.poetry]
name = "pomodoro-app"
version = "0.1.0"
description = ""
authors = ["eliascomh <grilocamusiano@gmail.com>"]
readme = "README.md"
packages = [{include = "pomodoro_app"}]

[tool.poetry.dependencies]
python = "^3.10"
kivy = "^2.1.0"
kivymd = "^1.1.1"


[tool.poetry.group.dev.dependencies]
buildozer = "^1.4.0"
cython = "^0.29.32"
watchdog = "^2.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
